[swagger] Update models
